left/right toggle and hide functionality working. normalized appearance across all attempted websites

--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,7 @@
       "css": ["ch_note_styles.css"],
       "js": [
         "jquery-3.1.1.slim.min.js",
+        "toggle.js",
         "content.js"
       ]
     }
