--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "Edit-50.png",
     "default_title": "Show/Hide Note"
   },
   "content_scripts": [
