--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
 
-  "name": "chrome_page_notes",
-  "description": "this extension adds a movable, resizeable yellow box on top of the existing page",
+  "name": "notes-everywhere",
+  "description": "Adds a notepad to every page you visit and saves any text you input so you can access them on return visits. Has speech to text and copy to clipboard functionality.",
   "version": "1.0",
 
   "browser_action": {
